# offboard

./: CMakeLists.txt  README.md  package.xml  test_case.md
config/: config.yaml  waypoints.yaml
include/offboard/: .conversion.h  conversion.h  ivsr_log.cpp  ivsr_log.h  logging.h  logs.h  offboard.h  traj_gen.h
launch/: offboard.launch  planner.launch  trigger.launch
src/: .gps.cpp  .local_node.cpp  .setpoint_node.cpp  .setpoint_node_bak.cpp  gps_offb.cpp  hover_node.cpp  hovering_node.cpp  ivsr_log.cpp  local_node.cpp  logging_lib.cpp  logging_node.cpp  logs_node.cpp  offboard_lib.cpp  offboard_node.cpp  setmode_offb.cpp  setpoint_node.cpp  target_pub.cpp  trigger_pub.cpp
